syntax = "proto3";

package api.v1;
option go_package = "./pb";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

message KYCData {
  string id_number = 1 [json_name = "id_number"];
  string kra_pin = 2 [json_name = "kra_pin"];
}

message UserMeta {
  KYCData kyc_data = 1;
}


message User {
  uint64 ID = 1; // @gotags: db:"id"
  string name = 2 [(validate.rules).string.min_len = 1]; // @gotags: db:"name"
  string email = 3 [(validate.rules).string.email = true]; // @gotags: db:"email"
  string phone_number = 4 [json_name = "phone_number", (validate.rules).string.min_len = 1]; // @gotags: db:"phone_number"
  string password = 5 [(validate.rules).string.min_len = 8]; // @gotags: db:"password"
  UserMeta meta = 6; // @gotags: db:"meta"
  google.protobuf.Timestamp created_at = 7 [json_name = "created_at"]; // @gotags: db:"created_at"
  google.protobuf.Timestamp updated_at = 8 [json_name = "updated_at"]; // @gotags: db:"updated_at"
}
